force-app/main/default/objects/KimbleOne__AllowanceSchemeAllowanceType__c/KimbleOne__AllowanceSchemeAllowanceType__c.object-meta.xml
<CustomObject>
    <label>Allowance Scheme Allowance Type</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allowance Scheme Allowance Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>