force-app/main/default/objects/KimbleOne__AllowanceSchemeAllowanceType__c/fields/KimbleOne__AllowancePeriodCalculationMethod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowancePeriodCalculationMethod__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Allowance Period Calculation Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AllowancePeriodCalculationMethod</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Allowance Scheme Allowance Types</relationshipLabel>
    <relationshipName>AllowanceSchemeAllowanceTypes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>