force-app/main/default/objects/KimbleOne__AllowanceSchemeAllowanceType__c/fields/KimbleOne__AllowanceScheme__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowanceScheme__c</fullName>
    <label>Allowance Scheme</label>
    <referenceTo>KimbleOne__AllowanceScheme__c</referenceTo>
    <relationshipLabel>Allowance Scheme Allowance Types</relationshipLabel>
    <relationshipName>AllowanceSchemeAllowanceTypes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>