force-app/main/default/objects/KimbleOne__AllowanceSchemeAllowanceType__c/fields/KimbleOne__RateCardCombDefnAdjustment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RateCardCombDefnAdjustment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Adjustment Rate Combn Defn</label>
    <referenceTo>KimbleOne__RateCardCombinationDefinition__c</referenceTo>
    <relationshipLabel>Allowance Scheme Allowance Types (Adjustment)</relationshipLabel>
    <relationshipName>AllowanceSchemeAllowanceTypesAdjustment</relationshipName>
    <type>Lookup</type>
</CustomField>