force-app/main/default/objects/KimbleOne__AllowanceSchemeAllowanceType__c/fields/KimbleOne__RateCardCombDefnAllowance__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RateCardCombDefnAllowance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Allowance Rate Combn Defn</label>
    <referenceTo>KimbleOne__RateCardCombinationDefinition__c</referenceTo>
    <relationshipLabel>Allowance Scheme Allowance Types (Allowance)</relationshipLabel>
    <relationshipName>AllowanceSchemeAllowanceTypesAllowance</relationshipName>
    <type>Lookup</type>
</CustomField>