force-app/main/default/objects/KimbleOne__AllowanceSchemeAllowanceType__c/fields/KimbleOne__RateCardCombDefnScale__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RateCardCombDefnScale__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Scale Rate Combn Defn</label>
    <referenceTo>KimbleOne__RateCardCombinationDefinition__c</referenceTo>
    <relationshipLabel>Allowance Scheme Allowance Types (Scale Rate Combn Defn)</relationshipLabel>
    <relationshipName>AllowanceSchemeAllowanceTypesScale</relationshipName>
    <type>Lookup</type>
</CustomField>